--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </div>
            
             <div class="div_any_child">
-                <div class="div_any_title"><img src="img/title_2.png">车辆状态统计 </div>
-                <p id="char2" class="p_chart" style="width: 100%; height: 3rem;"></p>
+                <div class="div_any_title"><img src="img/title_2.png">设备故障状态统计 </div>
+                <p id="char2" class="p_chart" style="width: 100%;"></p>
             </div> 
 
             <!-- <div class="pmiddboxtbott" >
