--- a/map.html
+++ b/map.html
@@ -16,21 +16,13 @@
         <div class="left nav">
             <ul>
                 <li><i class="nav_1"></i><a href="index.html">数据概览</a> </li>
-                <li><i class="nav_2"></i><a href="carContrl.html">车辆监控</a> </li>
-                <li class="nav_active"><i class="nav_3"></i><a href="map.html">地图界面</a> </li>
             </ul>
         </div>
         <div class="header_center left">
             <h2><strong>xx区智慧旅游综合服务平台</strong></h2>
             <p class="color_font"><small>Comprehensive service platform for smart tourism</small></p>
         </div>
-        <div class="right nav text_right">
-            <ul>
-                <li><i class="nav_7"></i><a href="static.html">查询统计</a> </li>
-                <li><i class="nav_8"></i><a href="message.html">信息录入</a> </li>
-                <li><i class="nav_4"></i><a href="table1.html">表格界面</a> </li>
-            </ul>
-        </div>
+    
         
     </header>
     <!--内容部分-->
@@ -48,8 +40,6 @@
             <div class="map_right_top">
                 <ul>
                     <li class="li_active">预警信息</li>
-                    <li>分类搜索</li>
-                    <li>专题信息</li>
                 </ul>
             </div>
             <div class="map_con">
@@ -100,103 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="map_con_div">
-                    <p>
-                        <input type="text" placeholder="输入关键字" class="carNo_input"><input type="button"
-                            class="find_but">
-                    </p>
-                    <div class="map_work">
-                        <ul>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div02"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                            <li>
-                                <div class="img_div img_div01"></div>
-                                <div class="img_div_text">便民服务</div>
-                            </li>
-                        </ul>
-                        <div class="map_resList">
-                            <p class="set_list"><i class="list_i"></i> 查询结果：<span class="right"><i
-                                        class="glyphicon glyphicon-backward back_i"></i><a href="javascript:void(0)"
-                                        onclick="back()">返回 </a> </span></p>
-                            <ul>
-                                <li>
-                                    <p><strong>爱尚美术馆</strong><span class="right"><a href="javascript:void(0)"
-                                                title="视频"><img src="img/nav_5.png"> </a><a href="javascript:void(0)"
-                                                title="定位"><img src="img/find01.png"> </a> </span></p>
-                                    <p>四川省成都市高新区北美一路31号</p>
-                                </li>
-                                <li>
-                                    <p><strong>爱尚美术馆</strong><span class="right"><a href="javascript:void(0)"
-                                                title="视频"><img src="img/nav_5.png"> </a><a href="javascript:void(0)"
-                                                title="定位"><img src="img/find01.png"> </a> </span></p>
-                                    <p>四川省成都市高新区北美一路31号</p>
-                                </li>
-                                <li>
-                                    <p><strong>爱尚美术馆</strong><span class="right"><a href="javascript:void(0)"
-                                                title="视频"><img src="img/nav_5.png"> </a><a href="javascript:void(0)"
-                                                title="定位"><img src="img/find01.png"> </a> </span></p>
-                                    <p>四川省成都市高新区北美一路31号</p>
-                                </li>
-                                <li>
-                                    <p><strong>爱尚美术馆</strong><span class="right"><a href="javascript:void(0)"
-                                                title="视频"><img src="img/nav_5.png"> </a><a href="javascript:void(0)"
-                                                title="定位"><img src="img/find01.png"> </a> </span></p>
-                                    <p>四川省成都市高新区北美一路31号</p>
-                                </li>
-                                <li>
-                                    <p><strong>爱尚美术馆</strong><span class="right"><a href="javascript:void(0)"
-                                                title="视频"><img src="img/nav_5.png"> </a><a href="javascript:void(0)"
-                                                title="定位"><img src="img/find01.png"> </a> </span></p>
-                                    <p>四川省成都市高新区北美一路31号</p>
-                                </li>
-                            </ul>
-                            <div id="page"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="map_con_div">
-                    <div class=" bow_shadow">
-                        <p>
-                            <input type="text" placeholder="输入关键字" class="carNo_input"><input type="button"
-                                class="find_but">
-                        </p>
 
-                        <p class="set_list"><i class="list_i"></i> 专题列表：</p>
-                        <p>
-                        <ul id="treeDemo" class="ztree"></ul>
-                        </p>
-                    </div>
-                </div>
 
             </div>
 
@@ -211,10 +105,7 @@
     <script src="js/map_control.js"></script>
     <script src="js/ztree/jquery.ztree.all-3.5.js"></script>
     <script src="js/listTree.js"></script>
-    <script
-    type="text/javascript"
-    src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"
-  ></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
   <script type="text/javascript" src="./json/car.js"></script>
 
     <script>
